# mipt-os

tech01/0/: hello.c
tech01/1/: copy-stream.c
tech01/2/: copy-stream.S
tech01/3/: reverse-print-lines.S  reverse-print-lines.s
tech02/0/: read-filter-write.c
tech02/1/: print-list-posix.c
tech02/2/: sort-file-contents.c
tech02/3/: print-list-posix.c
tech03/0/: normalize_path.c
tech03/2/: find-invalid-executables.c
tech03/3/: manage-symlinks.c
tech04/0/: find-substrings-in-file.c
tech04/1/: print-list-using-mmap.c
tech04/2/: make-spiral-file.c
tech04/3/: swap-file-mem-allocator.c
tech05/0/: test-proc-limit.c
tech05/1/: proc-print-numbers.c
tech05/2/: proc-count-words-rec.c  proc-count-words.c  test.c
tech06/0/: exec-python.c
tech06/1/: exec-gcc.c
tech06/2/: exec-cgi.c
tech07/0/: launch.c
tech07/1/: connect-2-processes.c
tech07/2/: process-gcc-output-2.c
tech07/3-4/: connect-n-processes-one-pipe.c
tech08/0/: count-sigint.c
tech08/1/: do-actions.c
tech08/2/: signalfd-rtsig.c
tech08/3/: ping-pong-using-signals.c
tech09/0/: tcp-client.c
tech09/1/: http-server-1.c
tech09/2/: http-server-2.c
tech10/0/: udp-client.c
tech10/1/: udp-dns-resolver.c
tech11/0/: CMakeLists.txt  simplefs.c
tech12/0/: epoll-read-fds-vector.c
tech12/1/: epoll-read-write-socket.c
tech13/0/: dgst-sha512.c
tech14/0/: mutex.c
tech14/1/: parallel-sum.c
tech14/2/: atomic.c
